Fix the vertical alignment of the partner logo if it is not square.

--- a/apps/partner2/stylesheets/head.styl
+++ b/apps/partner2/stylesheets/head.styl
@@ -29,10 +29,12 @@
       width 140px
       height 140px
       line-height @height
-      vertical-align top
+      vertical-align middle
       img
         max-width 100%
         max-height 100%
+        display inline-block
+        vertical-align middle
 
     .partner-actions
       width 300px
